test: add JUnit5 and Mockito coverage for core services